-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.197 2008-02-25 17:18:38 remko Exp $
-----------------------------------------------------------------------------------------
2008-02-25	remko
	* configure.ac, src/makefile, src/x2sys/makefile, src/mgd77/makefile, makegmt.macros.in:
				Shared libraries made easy: now set LIBEXT=a for static libraries and
				LIBEXT=$(SL) for shared libraries. Works also in supplements.
	* nc2xy.c:		Time coordinated recognised as such. Relative time output according
				to TIME_UNIT and TIME_EPOCH set in .gmtdefaults.

2008-02-24	remko
	* grd2xyz.txt, xyz2grd.txt:	Added information on using TIME COORDINATES.
	* gmt.h, gmt_globals.h:	Time system now fully defined in struct gmtdefs.time_system.
	* gmt_calclock.c:	---"---
	* gmt_init.c, gmt_init.h:	GMT_get_time_system and GMT_init_time_system_structure now use
				time_system as argument so that not only the internal time system
				defined in gmtdefs.time_system can be parsed.
				Need to move these functions to gmt_support.c?
				GMT_get_time_system can now also deal with "TIME_UNIT since TIME_EPOCH".
				'T' no longer required in epoch string.
				That means TIME_SYSTEM = "days since 2000-01-01 12:00" works.
	* gmt_grdio.c:		Now reuses GMT_get_time_system and GMT_init_time_system_structure.

2008-02-24	pwessel
	* gmt_*.c:		Made sure functions call GMT_exit and not exit when quitting.  Only main
				programs call exit.
	* pslib.c:		Bug in ps_shorten_path lead to SEGV when path resulted in a single point.

2008-02-22	remko
	* ex*/job*.sh:		Prepared for inclusion in documentation (instead of job*.csh)
	* doc/GNUmakefile:	Updated accordingly
	* doc/GMT_Chapter_7.tex doc/GMT_Tutorial.tex:	Switched from C shell to Bourne shell

2008-02-22	pwessel
	* psrose.c:		Added new -F option to disable the plotting of the scale bar.

2008-02-21	pwessel
	* pslib.c:		Fixed error in applying pstext's -Dj<dx>/<dy> shift in paragraph mode (-M).